--- a/src/style/index.less
+++ b/src/style/index.less
@@ -6,14 +6,18 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: rgb(202, 228, 206);
+  background-color: rgb(202, 228, 200, .5);
   color: #fff;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
   padding: 10px;
   min-height: 100vh;
+}
+
+.hide {
+  display: none;
 }
 
 p {
@@ -25,7 +29,22 @@ h2 {
   text-align: center;
 }
 
+label, input {
+  height: 26px;
+}
+
+input + span {
+  display: inline-block;
+  height: 26px;
+}
+
+label ~ label,
+input[type=radio] {
+  cursor: pointer;
+}
+
 input[type=checkbox] {
+  cursor: pointer;
   margin-right: 0;
 }
 
@@ -64,27 +83,36 @@ input[type=checkbox] {
 
 .btn {
   border: none;
-  color: #fff;
+  color: #ccc;
   cursor: pointer;
   font-size: 16px;
   padding: 8px 12px;
-  background-color: #9b3909;
+  background-color: transparent;
+  &.btn-large {
+    background-color: #f1590c;
+    display: block;
+    width: 100%;
+  }
 }
 
-.btn-large {
-  display: block;
-  width: 100%;
-}
 
 .setting {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 15px 0;
+  margin: 10px 0;
 }
 
 @media screen and (max-width: 400px) {
   .result-container {
     font-size: 14px;
   }
+}
+
+.basic-panel {
+  font-size: 16px;
+}
+
+.advance-panel {
+  font-size: 14px;
 }
