--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,58 +1,107 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:500&display=swap');
-
 * {
   box-sizing: border-box;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-  background-color: rgb(202, 228, 206);
+html {
+  font-size: 16px;
   color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  min-height: 100vh;
+}
+
+body {
+  background-color: rgb(202, 228, 200, 0.5);
+  padding: 0.5rem;
+  max-height: max-content;
+}
+
+.hide {
+  display: none;
 }
 
 p {
-  margin: 5px 0;
+  margin: 0.25rem 0;
 }
 
 h2 {
-  margin: 10px 0 20px;
+  margin: 0.5rem 0 1rem;
   text-align: center;
 }
 
-input[type=checkbox] {
+.label,
+label,
+input {
+  height: 1.5rem;
+  line-height: 1.5rem;
+}
+
+input + span {
+  display: inline-block;
+  height: 1.5rem;
+}
+
+label ~ label,
+input[type="radio"] {
+  cursor: pointer;
+}
+
+input[type="checkbox"] {
+  cursor: pointer;
   margin-right: 0;
 }
 
+.flex {
+  display: flex;
+}
+
 .container {
-  background-color: #5B3236;
+  margin: 1rem auto;
+  padding: 0.5rem 1rem;
+  width: 90vw;
+  max-width: 100vw;
+  border-radius: 10px;
+  background-color: #5a4547;
   box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.4);
-  padding: 20px;
-  width: 550px;
-  max-width: 100%;
+  .setting-container {
+    flex-direction: column;
+    padding: 0.5rem;
+  }
+  .item {
+    justify-content: space-between;
+    align-items: center;
+    margin: 0.5rem;
+  }
+  .len-result {
+    font-weight: bold;
+    color: aqua;
+    text-decoration: underline;
+  }
+  .length-item {
+    .label();
+    align-items: center;
+    > * {
+      flex: 1;
+      padding: 0 5px;
+      display: block;
+      line-height: 100%;
+    }
+  }
   .result-container {
+    .flex();
+    display: inline-flex;
     background-color: rgba(0, 0, 0, 0.4);
-    display: flex;
-    justify-content: flex-start;
     align-items: center;
     position: relative;
-    font-size: 18px;
     letter-spacing: 1px;
-    padding: 12px 10px;
-    height: 50px;
+    padding: 0.5rem 0.25rem;
+    height: 3.25rem;
     width: 100%;
-    #result {
+    font-size: 1.25rem;
+    overflow: hidden;
+    .result {
       word-wrap: break-word;
       max-width: calc(100% - 40px);
     }
-    
-    .btn {
-      font-size: 20px;
+    .clip-btn {
+      .btn();
       position: absolute;
       top: 5px;
       right: 5px;
@@ -60,31 +109,36 @@ input[type=checkbox] {
       width: 40px;
     }
   }
+  .basic-panel {
+    flex-direction: column;
+  }
+  .advance-panel {
+    flex-direction: column;
+    &.hide {
+      .hide();
+    }
+  }
 }
 
 .btn {
   border: none;
-  color: #fff;
+  color: #eee;
   cursor: pointer;
   font-size: 16px;
   padding: 8px 12px;
-  background-color: #9b3909;
-}
-
-.btn-large {
-  display: block;
-  width: 100%;
-}
-
-.setting {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 15px 0;
+  background-color: transparent;
+  &.btn-radius {
+    border-radius: 5px;
+  }
+  &.btn-large {
+    background-color: #f5911e;
+    display: block;
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 400px) {
-  .result-container {
-    font-size: 14px;
-  }
+  // .result-container {
+  //   font-size: 14px;
+  // }
 }
